--- a/baobao/src/pages/cat/index.less
+++ b/baobao/src/pages/cat/index.less
@@ -5,7 +5,7 @@
     overflow-y: auto;
     position: absolute;
     background-color: #f2f2f2;
-
+    width: 100%;
     .cart_top {
       color: #fff;
       height: 180px;
@@ -68,7 +68,7 @@
 
     .cart_main {
       height: 130px;
-      width: 351px;
+      width: 390px;
       background: #fff;
       margin: 0 12px;
       border-radius: 0 0 12px 12px;
