--- a/baobao/src/pages/list/index.less
+++ b/baobao/src/pages/list/index.less
@@ -110,4 +110,65 @@
       }
     }
   }
+  .toast {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    .mask {
+      width: 100%;
+      height: 100%;
+      background: #000000;
+      opacity: 0.5;
+      position: fixed;
+      left: 0;
+      top: 0;
+      z-index: 2;
+    }
+    .toast_title {
+      width: 80%;
+      height: 156px;
+      margin-top: -78px;
+      border-radius: 10px;
+      background: #ffffff;
+      position: absolute;
+      left: 10%;
+      top: 50%;
+      z-index: 33;
+
+      p {
+        margin: 8px auto;
+        &:nth-of-type(1) {
+          width: 45px;
+          height: 45px;
+          background: rgb(199, 198, 198);
+          border-radius: 50%;
+          text-align: center;
+          line-height: 45px;
+          i {
+            color: #fff;
+          }
+        }
+        &:nth-of-type(2) {
+          font-size: 16px;
+        }
+        &:nth-of-type(3) {
+          font-size: 12px;
+          color: #ccc;
+        }
+        &:nth-of-type(4) {
+          font-size: 12px;
+          margin-top: 15px;
+
+          button {
+            padding: 5px 20px;
+            height: 100%;
+            font-size: 14px;
+            border-radius: 10px;
+            background: transparent;
+            color: red;
+          }
+        }
+      }
+    }
+  }
 }
