--- a/baobao/src/pages/login/index.less
+++ b/baobao/src/pages/login/index.less
@@ -1,7 +1,13 @@
+.nomal {
+  width: 100%;
+}
 .box {
   height: 341px;
   width: 100%;
-  padding: 0 8%;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  margin-left: 8%;
   .img {
     width: 100%;
     display: flex;
@@ -12,7 +18,7 @@
     }
   }
   .label {
-    width: 320px;
+    width: 100%;
     color: #333;
     height: 27px;
     display: block;
